--- a/todo
+++ b/todo
@@ -392,6 +392,8 @@ fill architecture could work well.
 Todo by priority
 ----------------
  - improve guide
+   - chevron
+   - landing paragraph
    - link to it from readme
  - update readme.md
 
