ui options: spacebar is stop, no vel drag, invert scroll / zoom

--- a/todo
+++ b/todo
@@ -388,10 +388,16 @@ fill architecture could work well.
 11/11
 1. update guide
 
+1/16/21
+1. ui options:
+ - spacebar is stop instead of pause
+ - no velocity adjustment with vertical
+ - invert scrolling / zoom options
+
 Todo by priority
 ----------------
- - improve guide
-   - link to it from readme
+ - remember size of sidebar / bottom bar
+ - chord preview respects mute
 
  - midi input???
    - start with qwerty input
