chord preview respects mute

--- a/todo
+++ b/todo
@@ -397,11 +397,10 @@ fill architecture could work well.
 1/16/21
 1. ui remember menu / bottom bar size
 2. rename a few menu options
+3. chord preview respects mute
 
 Todo by priority
 ----------------
- - chord preview respects mute
-
  - midi input???
    - start with qwerty input
  - Unit view, at least for drums
