--- a/todo
+++ b/todo
@@ -403,6 +403,9 @@ fill architecture could work well.
 1. PLayhead jitter in real time
 2. note preview in top bar too
 
+2/24/21
+1. multi select in add woice
+
 Todo by priority
 ----------------
  - midi input???
@@ -412,7 +415,8 @@ Todo by priority
    - support windows
    - refactor the classes
  - investigate file browser save last dir bug
- - select multiple samples in file browser
+ - add unit upon add woice
+   - woice preview in add unit dialog, or else faster way to add units
  - don't save sample but rather save directory in file dialog
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
  - Unit view, at least for drums
