--- a/todo
+++ b/todo
@@ -417,12 +417,10 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
- 
  - midi input???
-   - don't buffer up all the things
-   - quantize
    - mute the unit regularly if you're recording, also record silence
-   - support windows
+   - quantize
+   - j / l to move cursor back / fwd
    - refactor the classes
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
  - Unit view, at least for drums
