--- a/todo
+++ b/todo
@@ -419,8 +419,9 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
- - midi input???
-   - mute the unit regularly if you're recording, also record silence
+ - bug with auto adding unit. woice name doesn't exist? b/c woice name is too long
+ - don't 
+ - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
