--- a/todo
+++ b/todo
@@ -417,10 +417,14 @@ fill architecture could work well.
 4. ijkl for midi input
 5. alt Q to quantize
 
+3/3
+1. finickiness with input at boundary
+
 Todo by priority
 ----------------
  - bug with auto adding unit. woice name doesn't exist? b/c woice name is too long
- - don't 
+ - don't show phantom playhead after repeat
+
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
  - Unit view, at least for drums
