--- a/todo
+++ b/todo
@@ -419,11 +419,13 @@ fill architecture could work well.
 
 3/3
 1. finickiness with input at boundary
+2. bug with auto adding unit when woice name is too long
 
 Todo by priority
 ----------------
- - bug with auto adding unit. woice name doesn't exist? b/c woice name is too long
+ - setting to auto advance after note input
  - don't show phantom playhead after repeat
+ - seek doesn't catch up for a long time if you seek past last meas
 
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
