--- a/todo
+++ b/todo
@@ -426,9 +426,12 @@ playback
 5. auto step forward on note input
 6. copy options and default
 
+3/4
+1. fix preview with all units brekaing with unit click preview
+2. polyphonic midi note preview
+
 Todo by priority
 ----------------
- - preview with all units breaks with unit click preview
  - hosting but not connected (30s timeout in mac, probably need to use non-network or have a bit of a delay)
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
