--- a/todo
+++ b/todo
@@ -440,6 +440,7 @@ Todo by priority
      with others.
    - something like ptweb
      - can pin instruments to be drums. (list of pinned is global)
+- when following and someone does midi it can mess you up
 
 Misc todo by categories
 -----------------------
