--- a/todo
+++ b/todo
@@ -446,6 +446,7 @@ playback
 5/30
 1. make remove/changevoice take id instead of no + name
 2. menu item to 'remove unused units' and 'remove unused voices'
+3. render volume option
 
 Todo by priority
 ----------------
