--- a/todo
+++ b/todo
@@ -450,6 +450,7 @@ playback
 
 Todo by priority
 ----------------
+ - save dialog state instead of just last dir
  - modal dialog for copy options
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
