--- a/todo
+++ b/todo
@@ -451,6 +451,7 @@ playback
 
 Todo by priority
 ----------------
+ - connecting after getting connection refused causes desync via invalid variant index
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - Unit view, at least for drums
