--- a/todo
+++ b/todo
@@ -436,6 +436,22 @@ playback
 3/21
 1. don't crash if selecting port that is already in use (thanks ewan for the report!)
 
+5/12
+1. Draw the current instrument above everything else
+2. Don't preview notes when clicking in the sidebar if the song is playing
+
+5/28
+1. fix clicking on certain projects with echo
+
+5/30
+1. (internal) make remove/changevoice take id instead of no + name
+2. menu item to 'remove unused units' and 'remove unused voices'
+3. render volume option
+4. dialog for copy options
+
+5/31
+1. fix silent cxn fail if you connect after a connection failure
+
 Todo by priority
 ----------------
  - show other's midi inputs if you're either following the or they're not playing
@@ -446,6 +462,7 @@ Todo by priority
    - something like ptweb
      - can pin instruments to be drums. (list of pinned is global)
 - when following and someone does midi it can mess you up
+- save dialog state instead of just last dir <- not that easy since you gotta save the state at diff places and the ptrec key is useful for the host dialog prefill
 
 Misc todo by categories
 -----------------------
