--- a/todo
+++ b/todo
@@ -454,6 +454,7 @@ playback
 
 Todo by priority
 ----------------
+ - put project name in top bar
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - Unit view, at least for drums
