--- a/todo
+++ b/todo
@@ -454,6 +454,7 @@ playback
 
 8/17
 1. ctrl+shift+(a/d) select and deselect all units
+2. title bar shows current project filename
 
 Todo by priority
 ----------------
