update thanks + todo

--- a/src/style/README
+++ b/src/style/README
@@ -13,13 +13,18 @@ is already applied (it is an issue with Qt). Depending on the scope of the error
 will happen making it apparent what the issue is.
 
 No style applied:
-	This means that the stylesheet has a top-level error (usually an error in a selector list or
-	a stray character in the topmost level of the stylesheet -- outside of all brackets).
+  This means that the stylesheet has a top-level error (usually an error in a selector list or
+  a stray character in the topmost level of the stylesheet -- outside of all brackets).
 
 Incomplete styling of a particular object(s):
-	This means that the stylesheet for those objects could not be parsed properly, and it is an
-	error in the code within any brackets for those selectors. Check that you didn't miss
-	parentheses or a semicolon.
+  This means that the stylesheet for those objects could not be parsed properly, and it is an
+  error in the code within any brackets for those selectors. Check that you didn't miss
+  parentheses or a semicolon.
 
 Everything that hasn't been explicitly styled is black:
-	The required palette.ini file is absent or unreadable.
+  The required palette.ini file is absent or unreadable.
+
+Thanks
+------
+Thanks to Ewan Green for providing the style-switching mechanism as well as
+creating a style that mimicks ptCollage's.
