fix moving styles to install. also reorder editor.pro

--- a/todo
+++ b/todo
@@ -472,6 +472,8 @@ Todo by priority
    - read multiple style dirs (executable dir, ../share, standard local path)
  - solo toggle for selected units only.
  - shift + W/S for navigating up selected units only
+ - disallow out-of-range values in the effects tab (e.g. negative group #s)
+
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
  - Unit view, at least for drums
