fix bug where pasted woice changes were wrong if woice list was deleted off start before

--- a/todo
+++ b/todo
@@ -465,6 +465,7 @@ playback
 9/19
 1. merge ewan's PR for style switching + ptcollage style
 2. urls relative to qss file. real multiple style dirs (executable dir, ../share, standard local path)
+3. fix bug where pasted woice changes were wrong if certain woices were deleted since program load
 
 Todo by priority
 ----------------
