--- a/todo
+++ b/todo
@@ -468,11 +468,11 @@ playback
 3. fix bug where pasted woice changes were wrong if certain woices were deleted since program load
 4. put stylesheets in qrc so that bundles aren't annoying
 5. cycle solo for selected units only
+6. disallow out-of-range values in the effects tab (e.g. negative group #s)
 
 Todo by priority
 ----------------
  - shift + W/S for navigating up selected units only
- - disallow out-of-range values in the effects tab (e.g. negative group #s)
 
  - show other's midi inputs if you're either following the or they're not playing
  - midi input: mute the unit regularly if you're recording, also record silence? Maybe idk
