--- a/todo
+++ b/todo
@@ -484,8 +484,7 @@ playback
 
 Todo by priority
 ----------------
- - find instruments dialog
-   - be able to process loop points
+ - be able to process loop points and base midi note
  - extend upper limit piano roll
 
  - fix crashes when installed from aur for whatever reason??? more oob things?
