n, shift+n for add voice / unit shortcuts

--- a/todo
+++ b/todo
@@ -483,6 +483,7 @@ playback
 1. find instruments dialog w/ note + midi preview
 
 10/8
+1. N & Shift+N as add voice / unit shortcuts
 
 
 Todo by priority
