--- a/todo
+++ b/todo
@@ -488,8 +488,13 @@ playback
    point metadata and repeat sample until 3s. loopforward only)
 
 
+10/10
+1. peak meter
+2. fix crash on select last unit when there are fewer voices than units
+
 Todo by priority
 ----------------
+ - octave markers
  - extend upper limit piano roll
 
  - fix crashes when installed from aur for whatever reason??? more oob things?
