--- a/todo
+++ b/todo
@@ -491,10 +491,10 @@ playback
 10/10
 1. peak meter
 2. fix crash on select last unit when there are fewer voices than units
+3. octave markers, with halberstadt keyboard on left
 
 Todo by priority
 ----------------
- - octave markers
  - extend upper limit piano roll
 
  - fix crashes when installed from aur for whatever reason??? more oob things?
