less janky copy / paste and shift when selection starts in middle of note

--- a/todo
+++ b/todo
@@ -495,7 +495,7 @@ playback
 
 10/13
 1. sorta janky shift left and right
-2. 
+2. adjust copy / paste so that it's less janky
 
 Todo by priority
 ----------------
