--- a/todo
+++ b/todo
@@ -502,7 +502,10 @@ Todo by priority
 ----------------
  - way to elongate notes (ctrl click in unit row)
  - experiment with other temperaments?
- - extend upper limit piano roll
+  - shift by quant, not by 1/12.
+  - add a snap shortcut
+  - toggle between having a ton (7 - 36, None) and not really (12, 24, 36, None)
+  - allow showing different piano
 
  - fix crashes when installed from aur for whatever reason??? more oob things?
    - turns out it's GLIBCXX_ASSERTIONS
@@ -514,6 +517,7 @@ Todo by priority
      with others.
    - something like ptweb
      - can pin instruments to be drums. (list of pinned is global)
+- extend upper limit piano roll
 - when following and someone does midi it can mess you up
 - save dialog state instead of just last dir <- not that easy since you gotta save the state at diff places and the ptrec key is useful for the host dialog prefill
 
