--- a/todo
+++ b/todo
@@ -497,12 +497,12 @@ playback
 1. sorta janky shift left and right
 2. adjust copy / paste so that it's less janky
 3. fix draw offset when you draw notes in snap under semitone
+4. transpose by quanty
 
 Todo by priority
 ----------------
  - way to elongate notes (ctrl click in unit row)
  - experiment with other temperaments?
-  - shift by quant, not by 1/12.
   - add a snap shortcut
   - toggle between having a ton (7 - 36, None) and not really (12, 24, 36, None)
   - allow showing different piano
