attempt centre align

--- a/todo
+++ b/todo
@@ -506,6 +506,7 @@ Todo by priority
 ----------------
  - way to elongate notes (ctrl click in unit row)
  - experiment with other temperaments?
+  - will need to recentre drawing on centre of note / units
   - allow showing different piano
 
  - fix crashes when installed from aur for whatever reason??? more oob things?
